force-app/main/default/objects/Business_Hours_Setting__mdt/fields/Rejection_Hour_For_SLA_Post_Next_Day__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Hour_For_SLA_Post_Next_Day__c</fullName>
    <description>Number of hours after which auto rejection should be fired if SLA is after next day.</description>
    <label>Rejection Hour For SLA Post Next Day</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>