force-app/main/default/objects/Business_Hours_Setting__mdt/fields/StartTimeOfTheDay__c.field-meta.xml
<CustomField>
    <fullName>StartTimeOfTheDay__c</fullName>
    <description>Time entered from 0 - 24, which would be the start of the business day.</description>
    <label>Start Hour of the Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>